force-app/main/default/objects/Limits_Snapshot__c/Limits_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Limits Snapshot</label>
    <nameField>
        <displayFormat>LS-{0000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Limits Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>