force-app/main/default/objects/Limits_Snapshot__c/fields/Aggregate_Queries__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Queries__c</fullName>
    <label>Aggregate Queries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>