force-app/main/default/objects/Limits_Snapshot__c/fields/Elapsed_ms__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_ms__c</fullName>
    <label>Elapsed ms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>