force-app/main/default/objects/Limits_Snapshot__c/fields/Email_Invocations__c.field-meta.xml
<CustomField>
    <fullName>Email_Invocations__c</fullName>
    <label>Email Invocations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>