force-app/main/default/objects/Limits_Snapshot__c/fields/Heap_Size__c.field-meta.xml
<CustomField>
    <fullName>Heap_Size__c</fullName>
    <label>Heap Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>