force-app/main/default/objects/Limits_Snapshot__c/fields/Mobile_Push_Apex_Calls__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Push_Apex_Calls__c</fullName>
    <label>Mobile Push Apex Calls</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>