force-app/main/default/objects/Limits_Snapshot__c/fields/Profiler_Type__c.field-meta.xml
<CustomField>
    <fullName>Profiler_Type__c</fullName>
    <label>Profiler Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>