force-app/main/default/objects/Limits_Snapshot__c/fields/Query_Rows__c.field-meta.xml
<CustomField>
    <fullName>Query_Rows__c</fullName>
    <label>Query Rows</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>