force-app/main/default/objects/Limits_Snapshot__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <defaultValue>&quot;Trial&quot;</defaultValue>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>