force-app/main/default/objects/Limits_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Profiler_Type__c</columns>
    <columns>Iterations__c</columns>
    <columns>Elapsed_ms__c</columns>
    <columns>CPU_Time__c</columns>
    <columns>Heap_Size__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>